# mrf-core

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  test_full_chain.py  test_full_engine.py  test_operator_exec.py  test_registry.py  test_run.py
mrfcore/: __init__.py  diagnostics.py  engine.py  exceptions.py  phases.py  pipeline.py  presets.py  registry.py  state.py
mrfcore/operators/: base.py  evaluate.py  filter.py  inspect.py  reflect.py  rewrite.py  summarize.py  transform.py
mrs/: __init__.py  diagnostics.py  engine.py  exceptions.py  phases.py  pipeline.py  registry.py  state.py
mrs/operators/: __init__.py  base.py  evaluate.py  filter.py  inspect.py  reflect.py  rewrite.py  summarize.py  transform.py
mrs_core/: __init__.py
mrs_core.egg-info/: PKG-INFO  SOURCES.txt
